fixed blurry image on resize

--- a/src/styles/Movie.scss
+++ b/src/styles/Movie.scss
@@ -48,6 +48,7 @@
       img {
         height: 65vh;
         width: 100%;
+        image-rendering: pixelated;
       }
     }
     .movie__poster__title {
